haseef dev watermark

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <h1>Hi this is your full stack developer...</h1>
 <p>Hello this is haseef</p>
 <p>This is webcraft</p>
+<p>This is Haseef Developer</p>
 </body>
 </html>
